hphp/test/zend/bad/zend/gc_007.php
<?php
$a = array(array());
$a[0][0] =& $a[0];
var_dump($a[0]);
var_dump(gc_collect_cycles());
unset($a);
var_dump(gc_collect_cycles());
echo "ok\n"
?>